--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
+.DS_Store
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +32,6 @@ build/
 
 ### VS Code ###
 .vscode/
+mvnw
+mvnw.cmd
+.mvn/wrapper/maven-wrapper.properties
