Update PostgreSQL connection settings and JPA configuration in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,19 @@
 spring.application.name=powersync
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/familymind_powersync
+spring.datasource.url=jdbc:postgresql://localhost:4321/familymind_powersync
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.liquibase.enabled=false
 
 # Enable JPA Auditing
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=false
