--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,21 @@
 spring.application.name=powersync
 
 # PostgreSQL Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:4321/familymind_powersync
+spring.datasource.url=jdbc:postgresql://localhost:4321/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-spring.liquibase.enabled=false
+# Liquibase Configuration
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 
 # Enable JPA Auditing
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=false
