--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,8 +10,9 @@ replication:
 
 # Connection settings for sync bucket storage
 storage:
-  type: mongodb
-  uri: mongodb://mongo:27017/powersync_demo
+  type: postgresql
+  uri: postgresql://powersync_storage_user:powersync_secure_password_change_in_production@postgres-powersync:4321/postgres
+  sslmode: disable # 'verify-full' (default) or 'verify-ca' or 'disable'
 
 # The port which the PowerSync API server will listen on
 port: 8080
