Update docker-compose.yml to change PowerSync service port and remove unused MongoDB services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=powersync
+server.port=5050
 
 # PostgreSQL Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost:4321/postgres
